<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="information_label">Information</string>
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="satellite_map">Satellite</string>
    <string name="map_menu">Map</string>
    <string name="dialog_info_view">Media Gallery</string>
	<string name="close">Close</string>
    <string name="noWalks">No Walks Found</string>
    <string name="prefName">WhiteRockPrefs</string>
    
    <!-- CHRIS' STRINGS -->
    
    <!-- Generic Strings -->
    
    <string name="app_name">WhiteRockTrails</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Add Waypoint View Strings -->
    
    <!-- Choose Walk View Strings -->
    
    <string name="start">Start walk</string>
    <string name="chooseWalk">Choose a walk</string>
    
    <!-- Create Walk View Strings -->
    
    <!-- Edit Account View Strings -->
    
    <string name="account_title">Account Status!</string>
    <string name="account_message">Changes made to your account were successful</string>
    <string name="valid_changes">OK</string>
    
    <!-- Edit Walks View Strings -->
    
    <!-- Edit Waypoint View Strings -->
        
    <string name="waypoint_media_title">Picture 1 : Swansea Bay</string>
    <string name="waypoint_media_message">Description : Late July sunset over Swansea Bay with lighthouse in background. \n
        Children also playing in the sea while students dance and drink beer.</string>
    <string name="confirm_delete_media">Delete</string>
    <string name="back_media">Back</string>
    
    <string name="delete_media_title">Warning!</string>
    <string name="delete_media_message">Are you sure you want to delete this media?</string>
    <string name="confirm_delete_media_final">Delete</string>
    <string name="cancel_delete_media">Cancel</string>
    
    <!-- Home View Strings -->
    
    <string name="explore_title">What would you like to do?</string>
    <string name="add_to_existing">Add to existing walk</string>
    <string name="create_new_walk">Create new walk</string>
    
    <!-- Launch View Strings -->
    
    <!-- Log In View Strings -->
    
    <string name="welcome_text">Welcome to White\nRock Nature Trails</string>
    <string name="log_in_prompt">Please enter your Log In email address and password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="cancel">Cancel</string>
    <string name="log_in_error">White Rock Trails Login</string>
    <string name="log_in_message">The username or password you entered is incorrect. \n
         Please try again.</string>
    <string name="enter">Dummy Eneter</string>
    <string name="retry">OK</string>
    <string name="register">Register</string>
    
    <!-- My Walks View Strings -->
    
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create">Create Walk</string>
    
    <!-- Register View Strings -->
    
    <string name="register_title">Registration Status!</string>
    <string name="register_message">You successfully created an account</string>
    <string name="valid_register">OK</string>
    
    <!-- Reposition View Strings -->
    
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="reposition_title">Warning!</string>
    <string name="reposition_message">Are you sure you want to re-position this waypoint?</string>
    <string name="reposition_made_title">Waypoint Status!</string>
    <string name="reposition_made_message">Changes to waypoint position were successful</string>
    
    <!-- Search View Strings -->
    <string name="download_title">Select a walk</string>
    <string name="download">Download</string>
    
    <!-- Settings View Strings -->
    
    <!-- View Waypoint View Strings -->
    
    <string name="media_description">Description</string>
    <string name="media_pictures">Pictures</string>
    <string name="media_audio">Audio</string>
    <string name="media_video">Video</string>
    <string name="waypoint1">Waypoint 1 - Swansea Bay</string>
    <string name="returnToWalkView">Return To Walk View</string>
    
    <!-- Walk Options View Strings -->
    
    <string name="delete_walk_title">Warning!</string>
    <string name="delete_walk_message">Are you sure you want to delete this walk?</string>
    <string name="confirm_delete_walk">Delete</string>
    <string name="cancel_delete_walk">Cancel</string>
    
    <!-- Walk View Strings -->
    
    <string name="delete_waypoint_title">Warning!</string>
    <string name="delete_waypoint_message">Are you sure you want to delete this waypoint?</string>
    <string name="confirm_delete_waypoint">Delete</string>
    <string name="cancel_delete_waypoint">Cancel</string>
    
    <!-- Waypoint List View Strings -->
    
    <!-- Add Waypoint Fragment Strings -->
    <string name="confirm_waypoint">Confirm</string>
    <string name="cancel_waypoint">Cancel</string>
    <string name="add_waypoint_dialog_title">Add This Waypoint?</string>
    <string name="add_waypoint_dialog_message">Are you sure you want to add this waypoint to your walk?</string>
    <string name="search_">Search...</string>
    
    
</resources>

